--- a/web/modules/custom/travel/travel.info.yml
+++ b/web/modules/custom/travel/travel.info.yml
@@ -1,4 +1,4 @@
-name: Privacy Policy Module
-description: Privacy policy module
+name: Travel Privacy Policy Module
+description: Simple privacy policy module
 type: module
 core_version_requirement: 9.x
